Added new commands

--- a/RITNextBus_WebUI/Makefile
+++ b/RITNextBus_WebUI/Makefile
@@ -4,3 +4,14 @@ clean:
 run: clean
 	bundle exec middleman
 
+build: clean
+	bundle exec middleman build
+
+push:
+	git push origin master
+
+pull:
+	git pull origin master
+
+update: pull push
+
