--- a/RITNextBus_WebUI/Gemfile
+++ b/RITNextBus_WebUI/Gemfile
@@ -12,3 +12,6 @@ gem "wdm", "~> 0.1.0", :platforms => [:mswin, :mingw]
 
 # Windows does not come with time zone data
 gem "tzinfo-data", platforms: [:mswin, :mingw]
+
+# For fast and easy Github Pages deployment
+gem 'middleman-deploy'
